--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <link rel="stylesheet" href="styles/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Расписание Уроков</title>
+    <title>Расписание ИС-11</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
