--- a/index.html
+++ b/index.html
@@ -6,19 +6,32 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <link rel="stylesheet" href="styles/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Расписание ИС-11</title>
+    <title>Расписание Уроков</title>
+    <script
+  src="https://code.jquery.com/jquery-3.6.3.js"
+  integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
+  crossorigin="anonymous">
+</script>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="card_holder">
       <div class="lesson-card-horizontal">
+        <div class="number"><p class="lesson-number">1</p></div>
           <div class="lesson-info">
-              <div class="lesson-number">Урок 1</div>
               <h2 class="lesson-name">Математика</h2>
+              <h2 class="lesson-time">10:10-11:40</h2>
           </div>
-          <div class="lesson-details">
-              <p class="teacher-name">Учитель: Иванов И.И.</p>
-              <p class="classroom">Кабинет: 101</p>
+          <div class="lesson-details">   
+                <div class="teacher-name">
+                    <p>Иванов И.И.</p>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 16 16"><path fill="#173d30" d="M8 7a3 3 0 1 0 0-6 3 3 0 0 0 0 6ZM14 12a3 3 0 0 0-3-3H5a3 3 0 0 0-3 3v3h12v-3Z"/></svg>
+                </div>
+                
+              <div class="classroom">
+                <p>217</p>
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 16 16"><path fill="#173d30" fill-rule="evenodd" d="M9 0 3 2v12H1v2h14v-2h-2V2h-2v12H9V0ZM6.75 9c.414 0 .75-.448.75-1s-.336-1-.75-1S6 7.448 6 8s.336 1 .75 1Z" clip-rule="evenodd"/></svg>
+            </div>
           </div>
       </div>
     </div>
