--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <link rel="stylesheet" href="./styles.css">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guga's schedule</title>
 </head>
@@ -18,7 +18,7 @@
     <div id="nav-overlay"></div>
     <nav id="nav-fullscreen">
           <div id="settings">
-          <div id="settings_label"><h3>Отображение</h3>
+          <div id="settings_label">
             <div>
               <input type="checkbox" id="theme"></input><label for="theme" class="theme">тема</label>
             </div>
@@ -73,7 +73,7 @@
 </div>
 </body>
 
-<script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
+<script src="./jquery-3.6.3.js"></script>
 <script src="./guga.js"></script>
 
 
