--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
         <div class="data"></div>
         <svg class="arrow-right-3" viewBox="0 0 5 9"><path d="M0.419,9.000 L0.003,8.606 L4.164,4.500 L0.003,0.394 L0.419,0.000 L4.997,4.500 L0.419,9.000 Z" /></svg>
       </div>
+      <div class="no_data"><h2>Похоже такого в арсенале не имеется</h2></div>
     </div>
-
+    
     <div class="card_holder"></div>
 
 <div class="toast">
