--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="manifest" href="/guga.webmanifest">
+
     <title>Guga's schedule</title>
+
 </head>
 
 
@@ -75,6 +78,7 @@
 </body>
 
 <script src="./jquery-3.6.3.js"></script>
+<script src="./app.js"></script>
 <script src="./guga.js"></script>
 
 
