use colors from design book
yup

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 
 <body>
   <div class="view_">
+    <div class="learn-box">
+      <h1 id="text">Привет! <br> Похоже ты тут впервые?</h1>
+      <div class="btn-2">
+        <button class="conf decline">нет</button>
+        <button class="conf confirm">да</button>
+      </div>
+      
+    </div>
   <canvas id="bg"></canvas>
   <div id="nav-container">
     <div id="nav-overlay"></div>
@@ -73,6 +81,7 @@
           <span></span>
           <span></span>
     </a>
+    <h1 id="help-open"></h1>
   </div>
     <div class="nav-card">
       <div id="card-menu">
@@ -95,8 +104,9 @@
   </div>
   <div class="progress"></div>
 </div>
-
 </div>
+
+
 </body>
 
 <script src="./jquery-3.6.3.js"></script>
