rename teacher selector
;0

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <input type="radio" id="switch4-radio1" name="1" class="group"/>
                 <label for="switch4-radio1">Группа</label>
                 <input type="radio" id="switch4-radio2" name="1" class="teacher"/>
-                <label for="switch4-radio2">Учитель</label>
+                <label for="switch4-radio2">Преподаватель</label>
                 <input type="radio" id="switch4-radio3" name="1" class="place"/>
                 <label for="switch4-radio3">Кабинет</label>
                 <span id="active-label"></span>
